# wasmcloud_skills

./: GETTING_STARTED.md  README.md
demo/recipe-system/: README.md  wadm.yaml
demo/recipe-system/components/api/: Cargo.toml
demo/recipe-system/components/api/src/: lib.rs
demo/recipe-system/components/api/wit/: interfaces.wit
demo/recipe-system/scripts/: build.sh  deploy.sh  test.sh
demo/recipe-system/wit/: types.wit  worlds.wit
skills/wasmcloud-component/: SKILL.md
skills/wasmcloud-deploy/: SKILL.md
skills/wasmcloud-dev/: SKILL.md
skills/wasmcloud-provider/: SKILL.md
skills/wasmcloud-setup/: SKILL.md
skills/wasmcloud-wadm/: SKILL.md
skills/wasmcloud-wit/: SKILL.md
