[package]
name = "recipe-api"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { version = "0.34", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
